# test-api

./: .gitignore  Makefile  README.md  TTS.py  pyproject.toml  requirements-ci.txt  requirements.txt  speechRecognization.py
.github/workflows/: mart_full_deploy.yml
delta/: test.py
