[tool.poetry]
name = "dpl-dwh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "delta"}]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.3"
pydantic = "^2.7.1"
pydantic_yaml = "^1.3.0"
gitpython = "^3.1.43"
pyyaml = "^6.0.1"
databricks-sdk = "^0.27.1"
pytz = "^2023.3"
pyspark = "^3.5.1"

[tool.poetry.group.ci.dependencies]
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
